--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@react-three/drei": "^9.7.1",
     "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.1",
+    "drei": "^1.0.0",
     "express": "^4.18.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.13",
     "postcss-loader": "^6.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-spring": "^9.4.5",
+    "react-three-fiber": "^6.0.13",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "three": "^0.140.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
