--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@react-spring/three": "^9.4.5",
     "@react-three/drei": "^9.7.1",
     "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.1",
@@ -25,7 +26,6 @@
     "postcss-loader": "^6.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-spring": "^9.4.5",
     "react-three-fiber": "^6.0.13",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.24",
