--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "@react-spring/three": "^9.4.5",
+    "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.7.1",
     "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.1",
